--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 
 # production
 /build
+/log
+/dist
+/locales
+test.js
+
 
 # misc
 .DS_Store
@@ -21,3 +26,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# customFile
+*.db
